--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 						<img src="./res/buttons/debian.gif" alt="[debian]" width="90" height="31" title="Debian">
 					</div>
 					<div id="blogPanel">
-						<h1>Blog:-</h1><br>
+					  <h1>Blog:-</h1><br>
+					        <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0606.html">06/06/22 - UK Time;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0506.html">05/06/22 - The Onion Router;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0406.html">04/06/22 - Free Software (Free as in Freedom);</a><br>
