Changed email in index.html and removed backup file from blog

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<a id="yellow">Ben Goes to Tesco: Ultimate</a>
 						<p>Hello!</p>
 						<p>My name is <a id="yellow">Ben</a>, online I go by <a id="yellow">7Games</a> and I create games and applications. As you could guess the games I make are quite bad. Previously I used the <a id="yellow" href="https://gamemaker.io/en">GameMaker</a> and <a id="yellow" href="https://unity.com/">Unity</a> engines to make games but now I use the <a id="yellow" href="https://godotengine.org/">Godot</a> Engine. <br>For Programming Languages I know <a id="yellow">Java</a>, <a id="yellow">C#</a>, <a id="yellow">Python</a>, <a id="yellow">GML</a>, and <a id="yellow">C++</a>. I use <a id="yellow" href="https://gentoo.org/">Gentoo Linux</a> as my daily driver OS.</p>
-						<p>Email me at: <a id="yellow">contact@sevengames.xyz</a><br>Here is my <a id="yellow" href="./pgp.txt">PGP Key</a></p>
+						<p>Email me at: <a id="yellow">benjamin@sevengames.xyz</a><br>Here is my <a id="yellow" href="./pgp.txt">PGP Key</a></p>
 						<br>
 						<a href="https://landchad.net"><img src="./res/buttons/landchad.gif" alt="[LandChad.net]" title="Don't be an Internet Peasant"></a>
 						<a href="https://torproject.org"><img src="./res/buttons/tor.gif" alt="[use tor]" title="Use Tor!"></a>
