Changed index.html, main.css  Added donate.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 			<div class="container">
 				<div class="content">
 					<div id="main">
+						<br>
+						<br>
 						<img id="lowBottom" src="./res/seven.png" width="65" height="80">
 						<h1>Games</h1><br>
 						<a>Current Projects:-</a><br>
@@ -40,15 +42,11 @@
 						<p>My name is <a id="yellow">Ben</a>, online I go by <a id="yellow">7Games</a> and I create games and applications. As you could guess the games I make are quite bad. Previously I used the <a id="yellow" href="https://gamemaker.io/en">GameMaker</a> and <a id="yellow" href="https://unity.com/">Unity</a> engines to make games but now I use the <a id="yellow" href="https://godotengine.org/">Godot</a> Engine. <br>For Programming Languages I know <a id="yellow">Java</a>, <a id="yellow">C#</a>, <a id="yellow">Python</a>, <a id="yellow">GML</a>, and <a id="yellow">C++</a>. I use <a id="yellow" href="https://gentoo.org/">Gentoo Linux</a> as my daily driver OS.</p>
 						<p>Email me at: <a id="yellow">benjamin@sevengames.xyz</a><br>Here is my <a id="yellow" href="./pgp.txt">PGP Key</a></p>
 						<br>
-						<a href="https://landchad.net"><img src="./res/buttons/landchad.gif" alt="[LandChad.net]" title="Don't be an Internet Peasant"></a>
-						<a href="https://torproject.org"><img src="./res/buttons/tor.gif" alt="[use tor]" title="Use Tor!"></a>
-						<a href="https://wiby.me"><img src="./res/buttons/wiby.gif" alt="[wiby]" width="90" height="31" title="Wiby"></a>
-						<a href="https://idlewords.com/talks/website_obesity.htm"><img src="./res/buttons/javascript.gif" alt="[javascript free]" title="The modern web is bloated"></a>
-						<img src="./res/buttons/debian.gif" alt="[debian]" width="90" height="31" title="Debian">
-					</div>
-					<div id="blogPanel">
-					  <h1>Blog:-</h1><br>
-					        <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
+						<h1>Instances:-</h1><br>
+						<a id="yellow" href="https://searx.sevengames.xyz">SearXNG</a><a> - a privacy-respecting, hackable metasearch engine</a><br>
+						<a id="yellow" href="https://libreddit.sevengames.xyz">Libreddit</a><a> - an alternative private front-end to Reddit</a><br>
+						<h1>Blog:-</h1><br>
+					    <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0606.html">06/06/22 - UK Time;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0506.html">05/06/22 - The Onion Router;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0406.html">04/06/22 - Free Software (Free as in Freedom);</a><br>
@@ -56,6 +54,16 @@
 						<a id="sidePanelText" href="./blog/2022/0206.html">02/06/22 - New Website Moment;</a><br>
 						<a id="sidePanelText">------------------------------------------------------</a><br>
 						<a id="sidePanelText" href="./blog.html">Blog Archive</a>
+						<br>
+						<br>
+						<br>
+						<a href="https://landchad.net"><img src="./res/buttons/landchad.gif" alt="[LandChad.net]" title="Don't be an Internet Peasant"></a>
+						<a href="https://torproject.org"><img src="./res/buttons/tor.gif" alt="[use tor]" title="Use Tor!"></a>
+						<a href="https://wiby.me"><img src="./res/buttons/wiby.gif" alt="[wiby]" width="90" height="31" title="Wiby"></a>
+						<a href="https://idlewords.com/talks/website_obesity.htm"><img src="./res/buttons/javascript.gif" alt="[javascript free]" title="The modern web is bloated"></a>
+						<img src="./res/buttons/debian.gif" alt="[debian]" width="90" height="31" title="Debian">
+						<br>
+						<br>
 					</div>
 				</div>
 			</div>
