--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						<h1>Instances:-</h1><br>
 						<a id="yellow" href="https://searx.sevengames.xyz">SearXNG</a><a> - a privacy-respecting, hackable metasearch engine</a><br>
 						<a id="yellow" href="https://libreddit.sevengames.xyz">Libreddit</a><a> - an alternative private front-end to Reddit</a><br>
+						<a id="yellow" href="https://invidious.sevengames.xyz">Invidious</a><a> - an open source alternative front-end to YouTube</a><br>
 						<h1>Blog:-</h1><br>
 					    <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0606.html">06/06/22 - UK Time;</a><br>
