New Blog 10/July

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,10 @@
 					<div id="mainBlogArchive">
 						<h2>Blog:-</h2>
 						<p id="sidePanelText">2022:-</p>
+						<p id="sidePanelText">July:-</p>
+						<a id="sidePanelText" href="./blog/2022/1007.html">10/07/22 - I host Instances now!;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
+						<p id="sidePanelText">June:-</p>
 						<a id="sidePanelText" href="./blog/2022/0606.html">06/06/22 - UK Time;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0506.html">05/06/22 - The Onion Router;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0406.html">04/06/22 - Free Software (Free as in Freedom);</a><br>
