--- a/donate.html
+++ b/donate.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#ffffff">
 
 		<link rel="stylesheet" type="text/css" href="main.css" />
-		<title>7Games: The worst games ever made</title>
+		<title>7Games: Please give me money please</title>
 	</head>
 	<body>
 		<div class="header">
