--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 						<a id="yellow" href="https://searx.sevengames.xyz">SearXNG</a><a> - a privacy-respecting, hackable metasearch engine</a><br>
 						<a id="yellow" href="https://libreddit.sevengames.xyz">Libreddit</a><a> - an alternative private front-end to Reddit</a><br>
 						<a id="yellow" href="https://invidious.sevengames.xyz">Invidious</a><a> - an open source alternative front-end to YouTube</a><br>
-						<h1>Blog:-</h1><br>
+						<a id="yellow" href="https://nitter.sevengames.xyz">Nitter</a><a> - alternative Twitter front-end</a><br>
+						<h1>Latest Blogs:-</h1><br>
+						<a id="sidePanelText" href="./blog/2022/1007.html">10/07/22 - I host Instances now!;</a><br>
 					    <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0606.html">06/06/22 - UK Time;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0506.html">05/06/22 - The Onion Router;</a><br>
 						<a id="sidePanelText" href="./blog/2022/0406.html">04/06/22 - Free Software (Free as in Freedom);</a><br>
-						<a id="sidePanelText" href="./blog/2022/0306.html">03/06/22 - That was quick;</a><br>
-						<a id="sidePanelText" href="./blog/2022/0206.html">02/06/22 - New Website Moment;</a><br>
 						<a id="sidePanelText">------------------------------------------------------</a><br>
 						<a id="sidePanelText" href="./blog.html">Blog Archive</a>
 						<br>
