Added Tor services

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 						<p>Email me at: <a id="yellow">benjamin@sevengames.xyz</a><br>Here is my <a id="yellow" href="./pgp.txt">PGP Key</a></p>
 						<br>
 						<h1>Instances:-</h1><br>
-						<a id="yellow" href="https://searx.sevengames.xyz">SearXNG</a><a> - a privacy-respecting, hackable metasearch engine</a><br>
-						<a id="yellow" href="https://libreddit.sevengames.xyz">Libreddit</a><a> - an alternative private front-end to Reddit</a><br>
-						<a id="yellow" href="https://invidious.sevengames.xyz">Invidious</a><a> - an open source alternative front-end to YouTube</a><br>
-						<a id="yellow" href="https://nitter.sevengames.xyz">Nitter</a><a> - alternative Twitter front-end</a><br>
+						<a id="yellow">SearXNG</a> <a href="https://searx.sevengames.xyz" style="color:red">(www)</a> <a href="http://5qp2m7lqshh276wectiplbkkdhldjus6n3ibgllx4rsmixyk6tdpy5yd.onion/" style="color:magenta">(tor)</a><br>
+						<a id="yellow">Libreddit</a>  <a href="https://libreddit.sevengames.xyz" style="color:red">(www)</a> <a href="http://ekgvxozrqba7uolhr5gr626y2sdgusx6m2joctti4wrz6ks4wn3ry2qd.onion/" style="color:magenta">(tor)</a><br>
+						<a id="yellow">Invidious</a> <a href="https://invidious.sevengames.xyz" style="color:red">(www)</a> <a href="http://iqu22wzhhua2ojs2rdcp23dmcif5r6vijflas2h645v62c44b6pcpnid.onion/" style="color:magenta">(tor)</a><br>
+						<a id="yellow">Nitter</a> <a href="https://nitter.sevengames.xyz" style="color:red">(www)</a> <a href="http://wql55rzah6gt2gjbwtkshyzkpvzyndxz2lxbkl6mssdw7lbfvkk4afyd.onion/" style="color:magenta">(tor)</a><br>
 						<h1>Latest Blogs:-</h1><br>
 						<a id="sidePanelText" href="./blog/2022/1007.html">10/07/22 - I host Instances now!;</a><br>
 					    <a id="sidePanelText" href="./blog/2022/0407.html">04/07/22 - Epic Website Source;</a><br>
